feat: add and fix some feature
- Add new feature to retrieve all categories
- Fix data type in Swagger documentation
- Refactor code related to project management
- for new features, please check the README.MD
